netlify deployment update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="author" content="The Little Taco Shop">
         <meta name="description" content="Welcome to the Taco Shop">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <title>The Little Taco Shop</title>
+        <title>The Little Taco Shop!</title>
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
 
